# C_UFAZ_bachelor

./: .travis.yml  A60  A60.c  ASCII  ASCII.c  Calculator  Calculator.c  Combination  Combination.c  DividersOfFactorial  DividersOfFactorial.c  Factorial  Factorial.c  Fibonacci  Fibonacci.c  GuessANumber  GuessANumber.c  GuessANumber2  GuessANumber2.c  Insertion_sorting  Insertion_sorting.c  MTable  MTable.c  Makefile rules  README.md  Random  Random.c  Root  Root.c  Root.c~  Russian_roulette  Russian_roulette.c  Sin  Sin.c  Welcome_to_C.c  Welcome_to_C.s  Welcome_to_C2  a.out  arraytest  arraytest.c  (+27 more)
BigNumber/: BigInteger.cpp  BigInteger.hpp  BigNumber.cpp  BigNumber.hpp  a.out  main.cpp
Blast/: genome.c  main.c
Boyer-Moore/: a.out
C007/: fig07_04  fig07_04.c  fig07_06  fig07_06.c  fig07_07  fig07_07.c  fig07_10  fig07_10.c  fig07_11  fig07_11.c  fig07_12.c  fig07_13  fig07_13.c  fig07_14  fig07_14.c  fig07_15  fig07_15.c  fig07_16  fig07_16.c  fig07_17  fig07_17.c  fig07_20  fig07_20.c  fig07_21  fig07_21.c  fig07_24  fig07_24.c  fig07_26  fig07_26.c  fig07_28.c
C010/: fig10_02  fig10_02.c  fig10_03  fig10_03.c  fig10_05  fig10_05.c  fig10_07  fig10_07.c  fig10_09.c  fig10_13.c  fig10_16.c  fig10_18.c  struct  struct.c
C011/: accounts.txt  fig11_03  fig11_03.c  fig11_07  fig11_07.c  fig11_08  fig11_08.c  fig11_08.c~  fig11_11  fig11_11.c  fig11_11.c~  fig11_12  fig11_12.c  fig11_12.c~  fig11_15  fig11_15.c  fig11_15.c~  fig11_16  fig11_16.c  (+1 more)
Data Structure/Stack/: .travis.yml  CMakeLists.txt  Makefile  calc  lifo.c  lifo.h  main  main.c  test  test.c
(+672 files in other folders)
